--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,9 @@
 # dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-.yarn.lockq
+.pnp.js
+.yarn/install-state.gz
+yarn.lock
 
 # testing
 /coverage
